// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Charge BeforeContent should aggregate line_items by subscriptions 1`] = `
<div>
  <div
    className="simple-field"
  >
    <span
      className="field-label"
    >
      Status:
    </span>
    <span
      className="field-value"
    >
      <Badge
        color="secondary"
        pill={false}
        tag="span"
      />
    </span>
  </div>
  <div
    className="card"
  >
    <CardBody
      className="header clearfix"
      tag="div"
    >
      <a
        target="_blank"
      >
        <span>
          🔄 Subscription #
          1
        </span>
      </a>
      <SubscriptionAfterTitle
        source={
          Immutable.Map {
            charge_id: undefined,
            subscription_id: "1",
          }
        }
      />
    </CardBody>
    <CardBody
      className="content"
      tag="div"
    >
      <span>
        foo
         (
        7
        )
      </span>
      <span>
        bar
         (
        5
        )
      </span>
    </CardBody>
  </div>
  <div
    className="card"
  >
    <CardBody
      className="header clearfix"
      tag="div"
    >
      <a
        target="_blank"
      >
        <span>
          🔄 Subscription #
          2
        </span>
      </a>
      <SubscriptionAfterTitle
        source={
          Immutable.Map {
            charge_id: undefined,
            subscription_id: "2",
          }
        }
      />
    </CardBody>
    <CardBody
      className="content"
      tag="div"
    >
      <span>
        baz
         (
        1
        )
      </span>
    </CardBody>
  </div>
</div>
`;

exports[`Charge BeforeContent should display default color if there's no matching status 1`] = `
<div>
  <div
    className="simple-field"
  >
    <span
      className="field-label"
    >
      Status:
    </span>
    <span
      className="field-value"
    >
      <Badge
        color="secondary"
        pill={false}
        tag="span"
      >
        Foobar
      </Badge>
    </span>
  </div>
</div>
`;

exports[`Charge BeforeContent should display the appropriate color if there's a matching status 1`] = `
<div>
  <div
    className="simple-field"
  >
    <span
      className="field-label"
    >
      Status:
    </span>
    <span
      className="field-value"
    >
      <Badge
        color="danger"
        pill={false}
        tag="span"
      >
        Error
      </Badge>
    </span>
  </div>
</div>
`;

exports[`Charge SubscriptionAfterTitle should display the skipCharge action if the charge is queued 1`] = `
<ActionButtonsGroup
  actions={
    Array [
      Object {
        "child": <div>
          <i
                className="fa fa-fw fa-ban mr-1"
          />
          Skip
    </div>,
        "key": "skip",
        "options": Array [
          Object {
            "value": "rechargeSkipCharge",
          },
        ],
        "title": <div>
          <i
                className="fa fa-fw fa-ban mr-1"
          />
          Skip charge on subscription
    </div>,
        "tooltip": "Skip the charge for this subscription on Recharge",
      },
    ]
  }
  payload={
    Object {
      "charge_id": undefined,
      "subscription_id": undefined,
    }
  }
/>
`;

exports[`Charge SubscriptionAfterTitle should display the skipCharge action with the correct payload taken from the source 1`] = `
<ActionButtonsGroup
  actions={
    Array [
      Object {
        "child": <div>
          <i
                className="fa fa-fw fa-ban mr-1"
          />
          Skip
    </div>,
        "key": "skip",
        "options": Array [
          Object {
            "value": "rechargeSkipCharge",
          },
        ],
        "title": <div>
          <i
                className="fa fa-fw fa-ban mr-1"
          />
          Skip charge on subscription
    </div>,
        "tooltip": "Skip the charge for this subscription on Recharge",
      },
    ]
  }
  payload={
    Object {
      "charge_id": 2,
      "subscription_id": 3,
    }
  }
/>
`;

exports[`Charge SubscriptionAfterTitle should not display the skipCharge action if the charge is not queued 1`] = `
<ActionButtonsGroup
  actions={
    Array [
      Object {
        "child": <div>
          <i
                className="fa fa-fw fa-ban mr-1"
          />
          Skip
    </div>,
        "key": "skip",
        "options": Array [
          Object {
            "value": "rechargeSkipCharge",
          },
        ],
        "title": <div>
          <i
                className="fa fa-fw fa-ban mr-1"
          />
          Skip charge on subscription
    </div>,
        "tooltip": "Skip the charge for this subscription on Recharge",
      },
    ]
  }
  payload={
    Object {
      "charge_id": undefined,
      "subscription_id": undefined,
    }
  }
/>
`;

exports[`Charge SubscriptionAfterTitle should return null if isEditing 1`] = `null`;

exports[`Charge SubscriptionAfterTitle should return null if there's no integrationId 1`] = `null`;
